Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body {
     margin:0 auto; 
     height: 36vw;
     max-height: 250px;
-    padding-top: 3em;
+    padding-top: 2em;
 }
 
 #thewink {
@@ -70,7 +70,8 @@ body {
 }
 
 .header {
-    padding-top: 2em;
+    padding: 10px;
+    margin: 0 auto;
 }
 
 .title {
@@ -85,11 +86,14 @@ body {
 }
 
 .subheader {
-    padding-top: .2em;
-    padding-bottom: 2em;
     position: relative;
-    margin-bottom: .5em;
+    padding: 0;
+    margin: 0 auto;
     font-size: 1em;
+}
+
+p {
+    padding-bottom: 0;
 }
 
 button {
